--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-16 00:50+0300\n"
+"POT-Creation-Date: 2023-04-16 18:54+0300\n"
 "PO-Revision-Date: 2022-10-31 18:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -224,6 +224,52 @@ msgstr ""
 msgctxt "goods"
 msgid "БМП"
 msgstr "БМП"
+
+#: factory/templates/factory/redesign/factory.html:13
+#, fuzzy
+#| msgid "Производство"
+msgctxt "factory"
+msgid "Производство"
+msgstr "Вытворчасьць"
+
+#: factory/templates/factory/redesign/factory.html:17
+msgctxt "factory"
+msgid "цена"
+msgstr ""
+
+#: factory/templates/factory/redesign/factory.html:38
+msgctxt "factory"
+msgid "Энергия"
+msgstr ""
+
+#: factory/templates/factory/redesign/factory.html:101
+#, fuzzy
+#| msgid "В этом регионе нет Склада"
+msgctxt "factory"
+msgid "выбор группы товаров"
+msgstr "У гэтым рэгіёне няма Кладоўні"
+
+#: factory/templates/factory/redesign/factory.html:113
+#, fuzzy
+#| msgid "Вы летите в"
+msgctxt "factory"
+msgid "выбор товара"
+msgstr "Вы ляціце да"
+
+#: factory/templates/factory/redesign/factory.html:129
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "Выборы лидера"
+msgctxt "factory"
+msgid "выбор схемы"
+msgstr "Прэзыдэнцкія выбары"
+
+#: factory/templates/factory/redesign/factory.html:153
+#, fuzzy
+#| msgid "Передать"
+msgctxt "factory"
+msgid "создать"
+msgstr "Перадаць"
 
 #: factory/views/factory.py:53
 msgid "Производство"
@@ -504,6 +550,7 @@ msgid "Загрузить"
 msgstr "Запампаваць"
 
 #: party/templates/party/redesign/new_party.html:15
+#: party/views/management/new_party.py:83
 #, fuzzy
 #| msgctxt "overview"
 #| msgid "партии"
@@ -2086,7 +2133,7 @@ msgstr "Зьмяніць часавы пас"
 msgid "Навыки"
 msgstr "Навыкі"
 
-#: player/views/translate.py:64
+#: player/views/translate.py:68
 #, python-brace-format
 msgid "Last modified by {player.nickname}, id {player.pk}"
 msgstr ""
