--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-16 00:50+0300\n"
-"PO-Revision-Date: 2023-04-16 01:13+0300\n"
+"POT-Creation-Date: 2023-04-16 18:54+0300\n"
+"PO-Revision-Date: 2023-04-16 18:59+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -100,7 +100,6 @@ msgctxt "goods"
 msgid "Бензин"
 msgstr "Gas"
 
-#. Last modified by Администратор, id 1
 #: factory/models/project.py:39 state/models/treasury.py:68
 #: storage/models/destroy.py:44 storage/models/storage.py:63
 #: storage/models/storage.py:158 storage/models/trade_offer.py:84
@@ -178,7 +177,6 @@ msgctxt "goods"
 msgid "ПТ-орудия"
 msgstr "AT-canon"
 
-#. Last modified by Администратор, id 1
 #: factory/models/project.py:232 state/models/treasury.py:103
 #: storage/models/destroy.py:70 storage/models/storage.py:86
 #: storage/models/storage.py:188 storage/models/trade_offer.py:94
@@ -194,6 +192,41 @@ msgstr "Mines"
 msgctxt "goods"
 msgid "БМП"
 msgstr "IFV"
+
+#: factory/templates/factory/redesign/factory.html:13
+msgctxt "factory"
+msgid "Производство"
+msgstr "Production"
+
+#: factory/templates/factory/redesign/factory.html:17
+msgctxt "factory"
+msgid "цена"
+msgstr "price"
+
+#: factory/templates/factory/redesign/factory.html:38
+msgctxt "factory"
+msgid "Энергия"
+msgstr "Energy"
+
+#: factory/templates/factory/redesign/factory.html:101
+msgctxt "factory"
+msgid "выбор группы товаров"
+msgstr "product group selection"
+
+#: factory/templates/factory/redesign/factory.html:113
+msgctxt "factory"
+msgid "выбор товара"
+msgstr "product selection"
+
+#: factory/templates/factory/redesign/factory.html:129
+msgctxt "factory"
+msgid "выбор схемы"
+msgstr "schema selection"
+
+#: factory/templates/factory/redesign/factory.html:153
+msgctxt "factory"
+msgid "создать"
+msgstr "produce"
 
 #: factory/views/factory.py:53
 msgid "Производство"
@@ -408,22 +441,18 @@ msgstr "Cancel"
 msgid "Загрузить"
 msgstr "Upload"
 
-#. Last modified by Розмайн, id 20
 #: party/templates/party/redesign/new_party.html:15
+#: party/views/management/new_party.py:83
 msgctxt "new_party"
 msgid "Новая партия"
 msgstr "New party"
 
-#. Last modified by Розмайн, id 20
 #: party/templates/party/redesign/new_party.html:19
 msgctxt "new_party"
 msgid "Стоимость создания партии"
-msgstr "Party creation cost\r"
+msgstr "Party creation cost"
 
-#. Last modified by Розмайн, id 20
 #: party/templates/party/redesign/new_party.html:25
-#| msgctxt "party_manage"
-#| msgid "Глава партии"
 msgctxt "new_party"
 msgid "Название партии"
 msgstr "Party name"
@@ -621,8 +650,7 @@ msgstr "apply"
 msgid "primaries_in_party"
 msgstr "Primaries in party"
 
-#: party/views/lists/region_parties.py:86
-#: party/views/lists/state_parties.py:40
+#: party/views/lists/region_parties.py:86 party/views/lists/state_parties.py:40
 msgid "Партии региона"
 msgstr "Region`s parties"
 
@@ -1091,14 +1119,14 @@ msgid ""
 "Заполняется расходованием энергии, как и ежедневное финансирование, и "
 "зависит только от твоих личных усилий."
 msgstr ""
-"It is filled with energy expenditure, like daily financing, and depends "
-"only on your personal efforts."
+"It is filled with energy expenditure, like daily financing, and depends only "
+"on your personal efforts."
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
 msgid ""
-"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также "
-"один из трёх этапов зимней прогрессионой рамки аватара."
+"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один "
+"из трёх этапов зимней прогрессионой рамки аватара."
 msgstr ""
 "It will allow you to get a premium account for a comfortable game, as well "
 "as one of the three stages of the winter progression avatar frame."
@@ -1116,8 +1144,8 @@ msgstr "Fills with the efforts of all players on the server."
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
 msgid ""
-"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не "
-"пройдёшь соответствующий этап личной."
+"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь "
+"соответствующий этап личной."
 msgstr ""
 "You will not be able to collect rewards unlocked in the general progression "
 "until you complete the corresponding stage of the personal one."
@@ -1673,8 +1701,7 @@ msgid "Описание"
 msgstr "Description"
 
 #: player/views/change_back_allow.py:41
-#: player/views/change_wiki_hide_allow.py:41
-#: player/views/full_auto_allow.py:41
+#: player/views/change_wiki_hide_allow.py:41 player/views/full_auto_allow.py:41
 msgid "Некорректное значение"
 msgstr "Incorrect value"
 
@@ -1683,10 +1710,10 @@ msgid "Настройка партийного фона"
 msgstr "Party background switch"
 
 #: player/views/change_back_allow.py:57
-#: player/views/change_wiki_hide_allow.py:57
-#: player/views/full_auto_allow.py:57 player/views/set_language.py:54
-#: player/views/set_timezone.py:43 region/views/cancel_auto.py:35
-#: region/views/retrieve_cash.py:42 region/views/start_auto.py:78
+#: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
+#: player/views/set_language.py:54 player/views/set_timezone.py:43
+#: region/views/cancel_auto.py:35 region/views/retrieve_cash.py:42
+#: region/views/start_auto.py:78
 msgid "Ошибка метода"
 msgstr "Method error"
 
@@ -1816,7 +1843,7 @@ msgstr "Timezone change"
 msgid "Навыки"
 msgstr "Skills"
 
-#: player/views/translate.py:64
+#: player/views/translate.py:68
 #, python-brace-format
 msgid "Last modified by {player.nickname}, id {player.pk}"
 msgstr ""
@@ -2260,7 +2287,6 @@ msgctxt "goods"
 msgid "Дизельное топливо"
 msgstr "Diesel"
 
-#. Last modified by Администратор, id 1
 #: state/models/treasury.py:94 storage/models/destroy.py:64
 #: storage/models/storage.py:80 storage/models/storage.py:208
 #: storage/models/trade_offer.py:95
@@ -2862,8 +2888,8 @@ msgid ""
 "Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
 "отменить. Продолжить?"
 msgstr ""
-"Your premium account will be renewed for one month. This operation cannot "
-"be undone. Proceed?"
+"Your premium account will be renewed for one month. This operation cannot be "
+"undone. Proceed?"
 
 #: storage/templates/storage/redesign/storage.html:368
 msgctxt "storage_assets"
@@ -3139,7 +3165,6 @@ msgctxt "assets"
 msgid "Перемещение товара"
 msgstr "Goods transfer"
 
-#. Last modified by cheshiretail, id 350
 #: storage/views/assets/assets_action.py:89
 msgctxt "assets"
 msgid "Запрещено вывозить товары из атакованных регионов"
