--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-16 00:50+0300\n"
+"POT-Creation-Date: 2023-04-16 22:53+0300\n"
 "PO-Revision-Date: 2023-04-11 22:45+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -193,9 +193,55 @@ msgctxt "goods"
 msgid "БМП"
 msgstr "Schützenpanzer"
 
+#: factory/templates/factory/redesign/factory.html:13
 #: factory/views/factory.py:53
+#, fuzzy
+#| msgid "Производство"
+msgctxt "factory"
 msgid "Производство"
 msgstr "Produktion"
+
+#: factory/templates/factory/redesign/factory.html:17
+msgctxt "factory"
+msgid "цена"
+msgstr ""
+
+#: factory/templates/factory/redesign/factory.html:38
+msgctxt "factory"
+msgid "Энергия"
+msgstr ""
+
+#: factory/templates/factory/redesign/factory.html:101
+#, fuzzy
+#| msgctxt "w_trading_new"
+#| msgid "Группа товаров"
+msgctxt "factory"
+msgid "выбор группы товаров"
+msgstr "Kategorie der Waren"
+
+#: factory/templates/factory/redesign/factory.html:113
+#, fuzzy
+#| msgctxt "w_trading"
+#| msgid "Выберите товар"
+msgctxt "factory"
+msgid "выбор товара"
+msgstr "Wählen Sie ein Produkt aus"
+
+#: factory/templates/factory/redesign/factory.html:129
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "выбор действия"
+msgctxt "factory"
+msgid "выбор схемы"
+msgstr "auswählen"
+
+#: factory/templates/factory/redesign/factory.html:153
+#, fuzzy
+#| msgctxt "storage_assets"
+#| msgid "создать"
+msgctxt "factory"
+msgid "создать"
+msgstr "aufbauen"
 
 #: factory/views/produce_good.py:31
 msgctxt "factory"
@@ -407,6 +453,7 @@ msgid "Загрузить"
 msgstr "hochladen"
 
 #: party/templates/party/redesign/new_party.html:15
+#: party/views/management/new_party.py:83
 #, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Глава партии"
@@ -1588,6 +1635,7 @@ msgid "стандарт"
 msgstr "Standard"
 
 #: player/templates/player/redesign/profile.html:490
+#: player/templates/player/translate/translate.html:35
 msgid "сохранить"
 msgstr "speichern"
 
@@ -1619,6 +1667,26 @@ msgstr "Sperren"
 msgctxt "wallet"
 msgid "Наличные"
 msgstr "Geld"
+
+#: player/templates/player/translate/translate.html:17
+#, fuzzy
+#| msgctxt "profile"
+#| msgid "цвет текста"
+msgctxt "translations"
+msgid "без контекста"
+msgstr "Textfarbe"
+
+#: player/templates/player/translate/translate.html:42
+msgctxt "translations"
+msgid "Русский язык"
+msgstr ""
+
+#: player/templates/player/translate/translate.html:43
+#, fuzzy
+#| msgid "Передать"
+msgctxt "translations"
+msgid "Перевод"
+msgstr "Übertragen"
 
 #: player/templates/player/view_profile.html:22
 msgid "char_info"
@@ -1865,7 +1933,7 @@ msgstr "Änderung der Zeitzone"
 msgid "Навыки"
 msgstr "Fahigkeiten"
 
-#: player/views/translate.py:64
+#: player/views/translate/translate.py:73
 #, python-brace-format
 msgid "Last modified by {player.nickname}, id {player.pk}"
 msgstr ""
@@ -3755,6 +3823,9 @@ msgstr "Drohnen"
 msgid "Дроны"
 msgstr "Drohnen"
 
+#~ msgid "Производство"
+#~ msgstr "Produktion"
+
 #, fuzzy
 #~| msgctxt "factory"
 #~| msgid "Недостаточно "
@@ -3960,10 +4031,6 @@ msgstr "Drohnen"
 #~ msgctxt "profile"
 #~ msgid "цвет фона"
 #~ msgstr "Hintergrundfarbe"
-
-#~ msgctxt "profile"
-#~ msgid "цвет текста"
-#~ msgstr "Textfarbe"
 
 #~ msgctxt "profile"
 #~ msgid "цвет акцента"
