--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-16 00:50+0300\n"
+"POT-Creation-Date: 2023-04-16 22:53+0300\n"
 "PO-Revision-Date: 2023-04-12 02:35+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -193,9 +193,57 @@ msgctxt "goods"
 msgid "БМП"
 msgstr "VCI"
 
+#: factory/templates/factory/redesign/factory.html:13
 #: factory/views/factory.py:53
+#, fuzzy
+#| msgid "Производство"
+msgctxt "factory"
 msgid "Производство"
 msgstr "Producción"
+
+#. Last modified by Subaru, id 768
+#: factory/templates/factory/redesign/factory.html:17
+msgctxt "factory"
+msgid "цена"
+msgstr "precio"
+
+#. Last modified by Subaru, id 768
+#: factory/templates/factory/redesign/factory.html:38
+msgctxt "factory"
+msgid "Энергия"
+msgstr "Energía"
+
+#. Last modified by Subaru, id 768
+#: factory/templates/factory/redesign/factory.html:101
+#| msgctxt "w_trading_new"
+#| msgid "Группа товаров"
+msgctxt "factory"
+msgid "выбор группы товаров"
+msgstr "categoría de bienes"
+
+#. Last modified by Subaru, id 768
+#: factory/templates/factory/redesign/factory.html:113
+#| msgctxt "w_trading"
+#| msgid "Выберите товар"
+msgctxt "factory"
+msgid "выбор товара"
+msgstr "escoger bienes"
+
+#. Last modified by Subaru, id 768
+#: factory/templates/factory/redesign/factory.html:129
+#| msgctxt "assets"
+#| msgid "выбор действия"
+msgctxt "factory"
+msgid "выбор схемы"
+msgstr "seleccionar esquema"
+
+#. Last modified by Subaru, id 768
+#: factory/templates/factory/redesign/factory.html:153
+#| msgctxt "storage_assets"
+#| msgid "создать"
+msgctxt "factory"
+msgid "создать"
+msgstr "producir"
 
 #: factory/views/produce_good.py:31
 msgctxt "factory"
@@ -293,41 +341,45 @@ msgstr ". En stock: "
 msgid "отклонить всё"
 msgstr "rechazar todo"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/manage.html:17
 #: party/views/management/management.py:28
 msgctxt "party_manage"
 msgid "Управление партией"
-msgstr "Administrat Partido"
+msgstr "Administrar Partido"
 
 #: party/templates/party/redesign/manage.html:32
 msgctxt "party_manage"
 msgid "партия"
 msgstr "partido"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/manage.html:47
 msgctxt "party_manage"
 msgid "должности"
-msgstr "posición"
+msgstr "posiciones"
 
 #: party/templates/party/redesign/manage.html:117
 msgctxt "party_manage"
 msgid "Тип партии"
 msgstr "Tipo de partido"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/manage.html:119
 msgctxt "party_manage"
 msgid "открытая"
-msgstr "Abrir"
+msgstr "abrir"
 
 #: party/templates/party/redesign/manage.html:119
 msgctxt "party_manage"
 msgid "закрытая"
 msgstr "cerrar"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/manage.html:119
 msgctxt "party_manage"
 msgid "изменить"
-msgstr "Cambiar"
+msgstr "cambiar"
 
 #: party/templates/party/redesign/manage.html:124
 msgctxt "party_manage"
@@ -375,10 +427,11 @@ msgctxt "party_manage"
 msgid "действия"
 msgstr "Acción"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/manage.html:250
 msgctxt "party_manage"
 msgid "Смена названия партии"
-msgstr "Cambiar nombbre"
+msgstr "Cambiar nombre"
 
 #: party/templates/party/redesign/manage.html:267
 #: party/templates/party/redesign/manage.html:295
@@ -406,29 +459,30 @@ msgstr "Cancelar"
 msgid "Загрузить"
 msgstr "Subir"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/new_party.html:15
-#, fuzzy
+#: party/views/management/new_party.py:83
 #| msgctxt "party_manage"
 #| msgid "Глава партии"
 msgctxt "new_party"
 msgid "Новая партия"
-msgstr "Líder del partido"
+msgstr "Nuevo partido"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/new_party.html:19
-#, fuzzy
 #| msgctxt "no_storage"
 #| msgid "Стоимость создания"
 msgctxt "new_party"
 msgid "Стоимость создания партии"
-msgstr "cuesta:"
+msgstr "Coste de creación:"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/new_party.html:25
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Глава партии"
 msgctxt "new_party"
 msgid "Название партии"
-msgstr "Líder del partido"
+msgstr "Nombre del partido"
 
 #: party/templates/party/redesign/new_party.html:41
 #: party/templates/party/redesign/party_blocks/no_party.html:21
@@ -436,10 +490,11 @@ msgctxt "no_party"
 msgid "создать партию"
 msgstr "Crear partido"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/party.html:61
 msgctxt "has_party"
 msgid "исключить"
-msgstr "Expulsar"
+msgstr "expulsar"
 
 #: party/templates/party/redesign/party_blocks/has_party.html:12
 #: party/templates/party/redesign/party_blocks/no_party.html:10
@@ -589,10 +644,11 @@ msgctxt "party_view"
 msgid "состав"
 msgstr "miemros"
 
+#. Last modified by Subaru, id 768
 #: party/templates/party/redesign/party_view.html:85
 msgctxt "party_view"
 msgid "Участников"
-msgstr "Participantes "
+msgstr "Miembros"
 
 #: party/templates/party/redesign/party_view.html:93
 msgctxt "party_view"
@@ -623,7 +679,8 @@ msgstr "aplicar"
 msgid "primaries_in_party"
 msgstr "Primarias del partido "
 
-#: party/views/lists/region_parties.py:86 party/views/lists/state_parties.py:40
+#: party/views/lists/region_parties.py:86
+#: party/views/lists/state_parties.py:40
 msgid "Партии региона"
 msgstr "Partidos de la región"
 
@@ -641,22 +698,23 @@ msgctxt "party_manage"
 msgid "Новый игрок партии"
 msgstr "Nuevo miembro del partido"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/new_role.py:49
 msgctxt "party_manage"
 msgid "Должность с таким названием уже есть"
-msgstr ""
+msgstr "Ya existe"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/new_role.py:50
 #: party/views/management/roles/new_role.py:57
 #: party/views/management/roles/new_role.py:65
 #: party/views/management/roles/new_role.py:72
 #: party/views/management/roles/new_role.py:80
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Добавить должность"
 msgctxt "party_manage"
 msgid "Новая должность"
-msgstr "Crear posición"
+msgstr "Nueva posición"
 
 #: party/views/management/roles/new_role.py:51
 #: party/views/management/roles/new_role.py:58
@@ -690,26 +748,27 @@ msgstr "Crear posición"
 msgid "Закрыть"
 msgstr "Cerrar"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/new_role.py:56
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "название должности"
 msgctxt "party_manage"
 msgid "Название не может быть пустым"
-msgstr "nombre de la posición"
+msgstr "No puede estar bacío "
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/new_role.py:64
 msgctxt "party_manage"
 msgid "Достигнуто ограничение на число должностей"
-msgstr ""
+msgstr "Límite de posiciones alcanzado"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/new_role.py:71
-#, fuzzy
 #| msgctxt "assets"
 #| msgid "Недостаточно средств для оплаты доставки"
 msgctxt "party_manage"
 msgid "Недостаточно прав для создания должности"
-msgstr "Fondos insuficientes para pagar el envío"
+msgstr "Derechos insuficientes"
 
 #: party/views/management/roles/new_role.py:79
 #: party/views/management/roles/remove_role.py:77
@@ -727,85 +786,89 @@ msgctxt "mining"
 msgid "Ошибка метода"
 msgstr "Error de metodo"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/remove_role.py:24
-#, fuzzy
 #| msgctxt "repost"
 #| msgid "репост не найден"
 msgctxt "party_manage"
 msgid "Должность не найдена"
-msgstr "repost no encontrado"
+msgstr "Posición no encontrado"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/remove_role.py:25
 #: party/views/management/roles/remove_role.py:37
 #: party/views/management/roles/remove_role.py:46
 #: party/views/management/roles/remove_role.py:61
 #: party/views/management/roles/remove_role.py:69
 #: party/views/management/roles/remove_role.py:78
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "название должности"
 msgctxt "party_manage"
 msgid "Удаление должности"
-msgstr "nombre de la posición"
+msgstr "Quitar posición"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/remove_role.py:36
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Добавить должность"
 msgctxt "party_manage"
 msgid "Это неудаляемая должность"
-msgstr "Crear posición"
+msgstr "Esta es una posición no removible"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/remove_role.py:45
 msgctxt "party_manage"
 msgid "Перед удалением должности её необходимо убрать у всех игроков!"
 msgstr ""
+"¡Antes de eliminar una posición, debe ser quitadas  de todos los jugadores!"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/remove_role.py:60
 msgctxt "party_manage"
 msgid "Вы пытаетесь удалить должность другой партии!"
-msgstr ""
+msgstr "¡Está tratando de eliminar la posición de otro partido!"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/remove_role.py:68
-#, fuzzy
 #| msgctxt "assets"
 #| msgid "Недостаточно средств для оплаты доставки"
 msgctxt "party_manage"
 msgid "Недостаточно прав для удаления должности"
-msgstr "Fondos insuficientes para pagar el envío"
+msgstr "Derechos insuficientes para eliminarlo"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/set_role.py:35
 msgctxt "has_party"
 msgid "В партии может быть только один глава"
-msgstr ""
+msgstr "Solo puede haber un líder por partido"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/set_role.py:36
 #: party/views/management/roles/set_role.py:51
 #: party/views/management/roles/set_role.py:58
 #: party/views/management/roles/set_role.py:65
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "название должности"
 msgctxt "has_party"
 msgid "Смена должности"
-msgstr "nombre de la posición"
+msgstr "Cambio de posición"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/set_role.py:50
 #: party/views/management/roles/set_role.py:64
-#, fuzzy
 #| msgctxt "assets"
 #| msgid "Недостаточно средств для оплаты доставки"
 msgctxt "has_party"
 msgid "Недостаточно прав для смены должности"
-msgstr "Fondos insuficientes para pagar el envío"
+msgstr "Derechos insuficientes para cambiar posición"
 
+#. Last modified by Subaru, id 768
 #: party/views/management/roles/set_role.py:57
-#, fuzzy
 #| msgctxt "storage"
 #| msgid "Некорректное число денег игрока"
 msgctxt "has_party"
 msgid "Некорректная партия игрока"
-msgstr "Cantidad de dinero del jugador incorrecta"
+msgstr "Miembro del partido incorrecto"
 
 #: party/views/management/staff/leave_party.py:37
 #: party/views/management/staff/leave_party.py:209
@@ -1127,8 +1190,8 @@ msgstr ""
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
 msgid ""
-"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один "
-"из трёх этапов зимней прогрессионой рамки аватара."
+"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один"
+" из трёх этапов зимней прогрессионой рамки аватара."
 msgstr ""
 "Le permitirá obtener una cuenta premium para un juego cómodo, así como una "
 "de las tres etapas de progresión del marco de avatar de invierno."
@@ -1146,8 +1209,8 @@ msgstr "Se llena con los esfuerzos de todos los jugadores en el servidor."
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
 msgid ""
-"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь "
-"соответствующий этап личной."
+"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь"
+" соответствующий этап личной."
 msgstr ""
 "No podrás recoger las recompensas desbloqueadas en la progresión general "
 "hasta que completes la etapa correspondiente de la personal."
@@ -1585,6 +1648,7 @@ msgid "стандарт"
 msgstr "estándar"
 
 #: player/templates/player/redesign/profile.html:490
+#: player/templates/player/translate/translate.html:35
 msgid "сохранить"
 msgstr "guardar"
 
@@ -1616,6 +1680,24 @@ msgstr "Bloqueado"
 msgctxt "wallet"
 msgid "Наличные"
 msgstr "Efectivo"
+
+#: player/templates/player/translate/translate.html:17
+msgctxt "translations"
+msgid "без контекста"
+msgstr ""
+
+#: player/templates/player/translate/translate.html:42
+msgctxt "translations"
+msgid "Русский язык"
+msgstr ""
+
+#: player/templates/player/translate/translate.html:43
+#, fuzzy
+#| msgctxt "cash_log"
+#| msgid "Перелёт"
+msgctxt "translations"
+msgid "Перевод"
+msgstr "Volando"
 
 #: player/templates/player/view_profile.html:22
 msgid "char_info"
@@ -1703,7 +1785,8 @@ msgid "Описание"
 msgstr "Descripción"
 
 #: player/views/change_back_allow.py:41
-#: player/views/change_wiki_hide_allow.py:41 player/views/full_auto_allow.py:41
+#: player/views/change_wiki_hide_allow.py:41
+#: player/views/full_auto_allow.py:41
 msgid "Некорректное значение"
 msgstr "Valor incorrecto"
 
@@ -1712,10 +1795,10 @@ msgid "Настройка партийного фона"
 msgstr "Personalizar fondo del partido"
 
 #: player/views/change_back_allow.py:57
-#: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
-#: player/views/set_language.py:54 player/views/set_timezone.py:43
-#: region/views/cancel_auto.py:35 region/views/retrieve_cash.py:42
-#: region/views/start_auto.py:78
+#: player/views/change_wiki_hide_allow.py:57
+#: player/views/full_auto_allow.py:57 player/views/set_language.py:54
+#: player/views/set_timezone.py:43 region/views/cancel_auto.py:35
+#: region/views/retrieve_cash.py:42 region/views/start_auto.py:78
 msgid "Ошибка метода"
 msgstr "Error de método"
 
@@ -1765,13 +1848,13 @@ msgctxt "profile"
 msgid "Некорректный код акцентов игры"
 msgstr "Dueño incorrecto"
 
+#. Last modified by Subaru, id 768
 #: player/views/color_change.py:103
-#, fuzzy
 #| msgctxt "mining"
 #| msgid "Ошибка получения финансирования"
 msgctxt "party_manage"
 msgid "Ошибка изменения цветов игры"
-msgstr "Error de financiación diaria"
+msgstr "Error al cambiar los colores"
 
 #: player/views/expense_energy.py:28
 msgid "Десять минут ещё не прошло"
@@ -1865,7 +1948,7 @@ msgstr "Cambiar zona horaria"
 msgid "Навыки"
 msgstr "Habilidades"
 
-#: player/views/translate.py:64
+#: player/views/translate/translate.py:73
 #, python-brace-format
 msgid "Last modified by {player.nickname}, id {player.pk}"
 msgstr ""
@@ -2672,8 +2755,7 @@ msgstr "Ofertar"
 #: storage/templates/storage/trading/trading.html:40
 msgctxt "w_trading"
 msgid "Выберите один или несколько критериев справа и нажмите \"Поиск\""
-msgstr ""
-"Selecciona uno o más criterios con el botón derecho y clikea \"Buscar\""
+msgstr "Selecciona uno o más criterios con el botón derecho y clikea \"Buscar\""
 
 #: storage/templates/storage/auctions/auctions.html:30
 #: storage/templates/storage/trading/trading.html:41
@@ -3579,6 +3661,7 @@ msgctxt "w_trading"
 msgid "Можно отменить только свой собственный оффер"
 msgstr "Solo puedes cancelar tu oferta"
 
+#. Last modified by Subaru, id 768
 #: storage/views/trading/create_offer.py:29
 #: storage/views/trading/create_offer.py:40
 #: storage/views/trading/create_offer.py:57
@@ -3597,7 +3680,7 @@ msgstr "Solo puedes cancelar tu oferta"
 #: storage/views/trading/create_offer.py:216
 msgctxt "w_trading_new"
 msgid "Создание оффера"
-msgstr "Creación de oferta"
+msgstr "Creando oferta"
 
 #: storage/views/trading/create_offer.py:31
 #: storage/views/trading/get_offers.py:41
@@ -3748,9 +3831,10 @@ msgstr ""
 msgid "Дроны"
 msgstr ""
 
+#~ msgid "Производство"
+#~ msgstr "Producción"
+
 #, fuzzy
-#~| msgctxt "factory"
-#~| msgid "Недостаточно "
 #~ msgctxt "party_manage"
 #~ msgid "Недостаточно прав!"
 #~ msgstr "No hay suficiente "
@@ -3772,25 +3856,19 @@ msgstr ""
 #~ msgstr " de oro"
 
 #, fuzzy
-#~| msgid "Финансирование"
 #~ msgctxt "goods"
 #~ msgid "Финансирование"
 #~ msgstr "Fondos"
 
 #, fuzzy
-#~| msgid "Торговля"
 #~ msgctxt "goods"
 #~ msgid "Торговля"
 #~ msgstr "Comercio"
 
 #, fuzzy
-#~| msgid "Навыки"
 #~ msgctxt "goods"
 #~ msgid "Навыки"
 #~ msgstr "Habilidades"
 
-#, fuzzy
-#~| msgctxt "profile"
-#~| msgid "место в рейтинге"
 #~ msgid "Тестовый сервер войн"
-#~ msgstr "lugar de calificación"
+#~ msgstr "Servidor de prueba de guerra"
