--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-16 00:50+0300\n"
+"POT-Creation-Date: 2023-04-16 22:53+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -198,9 +198,55 @@ msgctxt "goods"
 msgid "БМП"
 msgstr "IFV"
 
+#: factory/templates/factory/redesign/factory.html:13
 #: factory/views/factory.py:53
+#, fuzzy
+#| msgid "Производство"
+msgctxt "factory"
 msgid "Производство"
 msgstr "Produksi"
+
+#: factory/templates/factory/redesign/factory.html:17
+msgctxt "factory"
+msgid "цена"
+msgstr ""
+
+#: factory/templates/factory/redesign/factory.html:38
+msgctxt "factory"
+msgid "Энергия"
+msgstr ""
+
+#: factory/templates/factory/redesign/factory.html:101
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "Перемещение товаров"
+msgctxt "factory"
+msgid "выбор группы товаров"
+msgstr "Pemindahan penyimpanan"
+
+#: factory/templates/factory/redesign/factory.html:113
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "выберите склад"
+msgctxt "factory"
+msgid "выбор товара"
+msgstr "pilih penyimpanan"
+
+#: factory/templates/factory/redesign/factory.html:129
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "выбор действия"
+msgctxt "factory"
+msgid "выбор схемы"
+msgstr "tindakan"
+
+#: factory/templates/factory/redesign/factory.html:153
+#, fuzzy
+#| msgctxt "storage_assets"
+#| msgid "создать"
+msgctxt "factory"
+msgid "создать"
+msgstr "membuat"
 
 #: factory/views/produce_good.py:31
 msgctxt "factory"
@@ -497,6 +543,7 @@ msgid "Загрузить"
 msgstr "Unggah"
 
 #: party/templates/party/redesign/new_party.html:15
+#: party/views/management/new_party.py:83
 #, fuzzy
 #| msgctxt "overview"
 #| msgid "партии"
@@ -1786,6 +1833,7 @@ msgid "стандарт"
 msgstr "standar"
 
 #: player/templates/player/redesign/profile.html:490
+#: player/templates/player/translate/translate.html:35
 msgid "сохранить"
 msgstr "menyimpan"
 
@@ -1825,6 +1873,21 @@ msgstr "Keuangan"
 msgctxt "wallet"
 msgid "Наличные"
 msgstr "Uang"
+
+#: player/templates/player/translate/translate.html:17
+msgctxt "translations"
+msgid "без контекста"
+msgstr ""
+
+#: player/templates/player/translate/translate.html:42
+msgctxt "translations"
+msgid "Русский язык"
+msgstr ""
+
+#: player/templates/player/translate/translate.html:43
+msgctxt "translations"
+msgid "Перевод"
+msgstr ""
 
 #: player/templates/player/view_profile.html:22
 msgid "char_info"
@@ -2093,7 +2156,7 @@ msgstr "Perubahan zona waktu"
 msgid "Навыки"
 msgstr "Kemampuan"
 
-#: player/views/translate.py:64
+#: player/views/translate/translate.py:73
 #, python-brace-format
 msgid "Last modified by {player.nickname}, id {player.pk}"
 msgstr ""
@@ -4292,6 +4355,9 @@ msgstr ""
 #: war/models/wars/war_side.py:27
 msgid "Дроны"
 msgstr ""
+
+#~ msgid "Производство"
+#~ msgstr "Produksi"
 
 #, fuzzy
 #~| msgctxt "mining"
