--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1395,80 +1395,95 @@ msgstr "Skill up will be canceled. Continue cancellation?"
 msgid "Продолжить"
 msgstr "Continue"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:4
 msgctxt "repost"
 msgid "золото за репост"
 msgstr "gold for repost"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:5
 msgctxt "repost"
 msgid "поддержи проект репостом и получай золото!"
-msgstr "support WP by a repost and get gold!"
+msgstr "support the project with a repost and get gold! "
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:9
 msgctxt "repost"
 msgid "запись для репоста"
 msgstr "post for repost"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:11
 msgctxt "repost"
 msgid "перейти к записи (ссылка)"
 msgstr "go to post (link)"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:12
 msgctxt "repost"
 msgid "Для получения золота запись должна"
-msgstr "To receive gold, the repost must"
+msgstr "To receive gold, the entry must"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:13
 msgctxt "repost"
 msgid "быть первой сверху (или после закрепа)"
 msgstr "be first on top (or after pinning)"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:14
 msgctxt "repost"
 msgid "пробыть на стене не меньше часа"
-msgstr "stay in the VK profile for at least an hour"
+msgstr "stay on the wall for at least an hour"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:15
 msgctxt "repost"
 msgid "Бонус можно получить раз в сутки"
 msgstr "Bonus can be received once a day"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:19
 msgctxt "repost"
 msgid "репост не найден"
 msgstr "repost not found"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:21
 msgctxt "repost"
 msgid "репост найден"
 msgstr "repost found"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:24
 msgctxt "repost"
 msgid "Произошла ошибка API VK"
 msgstr "A VK API error has occurred"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:25
 msgctxt "repost"
 msgid "Обычно помогает повторный логин в игре"
 msgstr "Usually it helps to re-login in the game"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:26
 msgctxt "repost"
 msgid "Выйти из игры"
 msgstr "Quit"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:33
 msgctxt "repost"
 msgid "Получить"
 msgstr "Get"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:48
 msgctxt "repost"
 msgid "час не прошёл"
-msgstr "hour has not passed"
+msgstr "an hour has not passed"
 
 #: player/templates/player/redesign/player_status.html:36
 #: player/templates/player/redesign/player_status.html:43
